Trying to use frgaal